changed favicon, applied borderradius to search cards page, fixed homepage css where the body/bg image was not taking up full screen on smaller screens, added comments to commentsjs, removed extra card and container syntax in searchjs

--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -12,7 +12,7 @@ nav{
     width: 250px;
     height: 350px;
     cursor: pointer;
-    /* border-radius: 10px; */
+    border-radius: 12px;
     border: none;
 }
 
